<resources>
    <string name="app_name">NaidovichCalculator</string>
    <string name="app_name_slogan">SUPER CALCULATOR</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="sub">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="mul">*</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="div">/</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="display"></string>
    <string name="Backspace"><![CDATA[<---]]></string>
    <string name="divisionZero">Division by ZERO</string>
    <string name="Save">Save</string>
    <string name="tip">Tap save</string>
    <string name="clearList">C list</string>
    <string name="round">round</string>
    <string name="left_brace">(</string>
    <string name="right_brace">)</string>
    <string name="something_wrong">something is wrong</string>
    <string name="action_clearList">Clear button\'s list</string>
    <string name="action_round">Decimal places</string>
    <string name="root">√x</string>
    <string name="square">x²</string>
    <string name="percentage">%</string>
    <string name="about">About app</string>
    <string name="remove">Remove ads</string>
    <string name="copy_to_clipboard">copy</string>
    <string name="copy_from_clipboard">paste</string>
</resources>
