<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="namax.ru.ur131.MainActivity">
    <item
        android:id="@+id/action_clearList"
        android:orderInCategory="100"
        android:title="@string/action_clearList"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_round"
        android:orderInCategory="100"
        android:title="@string/action_round"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove"
        android:orderInCategory="100"
        android:title="@string/remove"
        app:showAsAction="never" />
</menu>