<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#263238"
    android:weightSum="1"

    >

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="start"-->
        <!--android:text=""-->
        <!--android:id="@+id/expression" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:id = "@+id/display"
        android:focusable="false"
        android:cursorVisible="false"
        android:longClickable="true"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"/>
        <!--android:inputType="text"-->



    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="1dp"

        >
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/seven"
            android:text="@string/seven"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"

            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/eight"
            android:text="@string/eight"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/nine"
            android:text="@string/nine"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/div"
            android:text="@string/div"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="1dp"

        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/four"
            android:text="@string/four"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/five"
            android:text="@string/five"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/six"
            android:text="@string/six"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/mul"
            android:text="@string/mul"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_margin="1dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/one"
            android:text="@string/one"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/two"
            android:text="@string/two"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/three"
            android:text="@string/three"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/add"
            android:text="@string/add"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="1dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/clear"
            android:text="@string/clear"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/zero"
            android:text="@string/zero"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/dot"
            android:text="."
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/sub"
            android:text="@string/sub"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="1dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clearList"
            android:id="@+id/clearList"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/round"
            android:id="@+id/round"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id = "@+id/equal"
            android:text="@string/equal"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Backspace"
            android:id="@+id/backspace"
            android:background="@drawable/button"
            android:textSize="@dimen/textSize"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="1dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Save"
            android:id="@+id/save"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_minus"
            android:id="@+id/plus_minus"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/left_brace"
            android:id="@+id/left_brace"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/right_brace"
            android:id="@+id/right_brace"
            android:background="@drawable/button"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/textSize"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayInScroll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tip"
                android:id="@+id/tip"
                android:layout_gravity="center_horizontal"
                android:gravity="center"/>
        </TableLayout>
    </ScrollView>


</LinearLayout>
